<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KingMe</string>
    <string name="curr_speed">Current Speed</string>
    <string name="curr_speed_default">0.00</string>
    <string name="distance">Distance Travelled</string>
    <string name="distance_default">0.00</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="elapsed_time_default">0:00:00</string>
    <string name="start_pause_text">Start/Stop</string>
    <string name="lap_reset_text">Lap/Reset</string>
    <string name="recording_started">Beginning Recording</string>
    <string name="recording_stopped">Stopping Recording</string>
    <string name="recording_label">Recording a ride via KingMe</string>
    <string name="recording_service_started">Recording Started</string>
    <string name="recording_service_paused">Recording Paused</string>

    <string name="units_category">Units</string>
    <string name="units_dialog">What units would you like?</string>

    <string name="settings_title">Settings</string>

    <string name="speed_units_statute">Mi/\nh</string>
    <string name="distance_units_statute">M\ni</string>
    <string name="speed_units_metric">km/\nh</string>
    <string name="distance_units_metric">k\nm</string>

</resources>
